--- a/registro_usuarios.html
+++ b/registro_usuarios.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Registro de Usuarios</title>
+  <!-- etiqueta para anclar estilos de css -->
   <link rel="stylesheet" href="statics/style.css">
 </head>
 <body>
@@ -30,6 +31,11 @@
                 <label for="confirm-password">Confirmar contraseña:</label>
                 <input type="password" id="confirm-password" name="confirm-password" required>
               </div>
+              <!-- Campo de rol -->
+              <select name="rol" id="rol">
+                <option value="1">Administrador</option>
+                <option value="2">Cajero</option>
+                <option value="3">Jefe De Bodega</option>
               <!-- Campo de "Fecha de nacimiento" -->
               <div class="form-group">
                 <label for="birthdate">Fecha de nacimiento:</label>
@@ -68,39 +74,7 @@
   
       function validateForm() {
         // Validación de los campos del formulario
-        var username = document.getElementById("username");
-      var email = document.getElementById("email");
-      var password = document.getElementById("password");
-      var confirmPassword = document.getElementById("confirm-password");
-      var birthdate = document.getElementById("birthdate");
-      var gender = form.querySelector("input[name='gender']:checked");
-
-      resetValidation();
-
-      // Validación de cada campo del formulario
-      if (!username.value) {
-        markAsInvalid(username);
-      }
-
-      if (!email.value || !isValidEmail(email.value)) {
-        markAsInvalid(email);
-      }
-
-      if (!password.value) {
-        markAsInvalid(password);
-      }
-
-      if (password.value !== confirmPassword.value) {
-        markAsInvalid(confirmPassword);
-      }
-
-      if (!birthdate.value) {
-        markAsInvalid(birthdate);
-      }
-
-      if (!gender) {
-        markAsInvalid(form.querySelector(".gender-label"));
-      }
+        // ...
   
         // Si todos los campos son válidos, muestra un mensaje de éxito y resetea el formulario
         if (form.querySelectorAll(".error").length === 0) {
@@ -110,7 +84,7 @@
             title: 'Registro exitoso',
             text: 'El formulario ha sido registrado exitosamente.'
           }).then(function() {
-            window.location.href = "minimercado.html";
+            form.reset();
           });
         } else {
           // Mostrar SweetAlert2 con mensaje de error
@@ -123,35 +97,7 @@
       }
   
       // Funciones de validación y otras funciones
-      function resetValidation() {
-      // Reinicia la validación eliminando las clases de error y validación de los campos
-      var inputs = form.querySelectorAll("input");
-      inputs.forEach(function(input) {
-        input.classList.remove("error", "valid");
-      });
-
-      var genderLabel = form.querySelector(".gender-label");
-      genderLabel.classList.remove("error");
-    }
-
-    function markAsInvalid(input) {
-      // Marca un campo como inválido agregando la clase "error"
-      input.classList.add("error");
-    }
-
-    function markAsValid(input) {
-      // Marca un campo como válido agregando la clase "valid"
-      input.classList.remove("error");
-      input.classList.add("valid");
-    }
-
-    function isValidEmail(email) {
-      // Verifica si un correo electrónico es válido utilizando una expresión regular
-      var emailRegex = /\S+@\S+\.\S+/;
-      return emailRegex.test(email);
-    }
-
-    
+      // ...
   
     </script>
   </body>
